fix High Contrast Mode issues
Toolbar buttons and the checked states
of inputs weren't discernible in Windows
High Contrast Mode White Theme

--- a/public/stylesheets/account-fixed.scss
+++ b/public/stylesheets/account-fixed.scss
@@ -338,3 +338,31 @@ button[aria-controls="errors"][aria-expanded="true"] > .bi-caret-right-fill {
   transform: rotate(90deg);
   -webkit-transform: rotate(90deg);
 }
+
+// Ensures toolbar buttons and checked states of inputs are still discernible in Windows High Contrast Mode
+@media screen and (forced-colors: active) {
+  // Sets the unchecked background color to the background color set by High Contrast Mode theme
+  .form-check-input {
+    background-color: Canvas;
+  }
+    // Sets the checked background color to the background color set by High Contrast Mode theme
+  .form-check-input:checked {
+    background-color: CanvasText;
+  }
+
+  // Sets the stroke of the svg check icon to the background color set by High Contrast Mode theme
+  .form-check-input:checked[type=checkbox] {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='Canvas' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
+  }
+  
+    // Sets the stroke of the svg filled circle to the background color set by High Contrast Mode theme
+    .form-check-input:checked[type=radio] {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+    }
+
+    // Needed to ensure toolbar buttons stay discernible in High Contrast Mode
+    .cke_top, .cke_reset_all * {
+      forced-color-adjust: none;
+      background: #fff;
+    }
+}
